import settings convenience stuff

--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -103,9 +103,10 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=528,256
+Pos=440,220
 Size=601,338
 Collapsed=0
+DockId=0x00000009,0
 
 [Window][Logs]
 Pos=1202,0
@@ -124,10 +125,10 @@ Size=409,172
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=0,656
-Size=1600,244
+Pos=238,656
+Size=1362,244
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000B,0
 
 [Window][Scene hierarchy]
 Pos=0,0
@@ -145,19 +146,26 @@ Size=323,104
 Collapsed=0
 
 [Window][Texture View]
-Pos=1027,276
+Pos=528,25
 Size=830,798
 Collapsed=0
 
 [Window][Material View]
-Pos=77,231
-Size=547,552
+Pos=440,220
+Size=601,166
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][FBX Import Summary]
-Pos=73,387
-Size=253,353
+Pos=90,102
+Size=253,509
 Collapsed=0
+
+[Window][Import settings]
+Pos=0,656
+Size=236,244
+Collapsed=0
+DockId=0x0000000A,0
 
 [Table][0x2048C668,2]
 RefScale=13
@@ -196,11 +204,16 @@ Column 0  Width=69
 Column 1  Weight=2.0000
 
 [Docking][Data]
+DockNode        ID=0x00000007 Pos=440,220 Size=601,338 Split=Y
+  DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=601,166 Selected=0x49347022
+  DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=601,170 Selected=0x15E43931
 DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Selected=0x5E5F7166
   DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,654 Split=X
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,900 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=766,900 Selected=0xBE5CABD5
       DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=432,900 CentralNode=1 Selected=0x5E5F7166
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=398,900 Selected=0xD7907EC4
-  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,244 Selected=0x36AF052B
+  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,244 Split=X Selected=0x36AF052B
+    DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Selected=0x86DC5FE7
+    DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1362,244 Selected=0x36AF052B
 
