--- a/MofuEngine/MofuEngine.vcxproj.filters
+++ b/MofuEngine/MofuEngine.vcxproj.filters
@@ -498,6 +498,9 @@
     <ClInclude Include="Editor\ImporterView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Content\NormalMapProcessing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Graphics\D3D12\Shaders\FullscreenTriangle.hlsl" />
