--- a/ExampleApp/ExampleApp.vcxproj.filters
+++ b/ExampleApp/ExampleApp.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="External\tracy\public\tracy\Tracy.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\EditorTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp">
