--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -10,8 +10,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=768,0
-Size=432,654
+Pos=522,0
+Size=730,556
 Collapsed=0
 DockId=0x00000002,0
 
@@ -104,13 +104,13 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=336,285
-Size=601,338
+Pos=519,69
+Size=730,410
 Collapsed=0
 
 [Window][Logs]
-Pos=1202,0
-Size=398,654
+Pos=1254,0
+Size=346,556
 Collapsed=0
 DockId=0x00000004,0
 
@@ -132,13 +132,13 @@ DockId=0x0000000B,0
 
 [Window][Scene hierarchy]
 Pos=0,0
-Size=766,654
+Size=520,556
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene hierarchy/##tree_2774B01A]
 IsChild=1
-Size=289,619
+Size=175,521
 
 [Window][Dear ImGui ID Stack Tool]
 Pos=60,60
@@ -151,21 +151,28 @@ Size=830,798
 Collapsed=0
 
 [Window][Material View]
-Pos=768,0
-Size=432,654
+Pos=1254,0
+Size=346,556
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000004,1
 
 [Window][FBX Import Summary]
-Pos=464,356
-Size=253,509
+Pos=0,558
+Size=290,342
 Collapsed=0
+DockId=0x00000007,1
 
 [Window][Import settings]
-Pos=0,656
-Size=236,244
+Pos=0,558
+Size=290,342
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000007,0
+
+[Window][Content Browser]
+Pos=292,558
+Size=1308,342
+Collapsed=0
+DockId=0x00000008,0
 
 [Table][0x2048C668,2]
 RefScale=13
@@ -205,12 +212,14 @@ Column 1  Weight=2.0000
 
 [Docking][Data]
 DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Selected=0x5E5F7166
-  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,654 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1200,900 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=766,900 Selected=0xBE5CABD5
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=432,900 CentralNode=1 Selected=0x5E5F7166
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=398,900 Selected=0xD7907EC4
-  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,244 Split=X Selected=0x36AF052B
-    DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Selected=0x86DC5FE7
+  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,556 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1252,900 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=520,900 Selected=0xBE5CABD5
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=730,900 CentralNode=1 Selected=0x5E5F7166
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=346,900 Selected=0x49347022
+  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,342 Split=X Selected=0x36AF052B
+    DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
+      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=290,510 Selected=0x86DC5FE7
+      DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1308,510 Selected=0x3DF3100E
     DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1362,244 Selected=0x36AF052B
 
