--- a/ExampleApp/ExampleApp.vcxproj.filters
+++ b/ExampleApp/ExampleApp.vcxproj.filters
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Projects\TestProject\AssetRegistry.ar" />
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\MofuEngine\External\imgui\misc\imgui.natvis" />
