--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -128,7 +128,7 @@
     <ClCompile Include="ECS\Systems\PrepareEngineFrameInfo.cpp" />
     <ClCompile Include="ECS\Systems\PrepareFrameRenderSystem.cpp" />
     <ClCompile Include="ECS\Systems\PreparePerObjectDataRenderSystem.cpp" />
-    <ClCompile Include="Editor\AssetBrowser.cpp" />
+    <ClCompile Include="Editor\ContentBrowser.cpp" />
     <ClCompile Include="Editor\AssetInteraction.cpp" />
     <ClCompile Include="Editor\AssetPacking.cpp" />
     <ClCompile Include="Editor\EditorInterface.cpp" />
@@ -226,7 +226,7 @@
     <ClInclude Include="ECS\Systems\SubmitEntityRenderSystem.cpp" />
     <ClInclude Include="ECS\Systems\TransformSystem.cpp" />
     <ClInclude Include="ECS\Transform.h" />
-    <ClInclude Include="Editor\AssetBrowser.h" />
+    <ClInclude Include="Editor\ContentBrowser.h" />
     <ClInclude Include="Editor\AssetInteraction.h" />
     <ClInclude Include="Editor\AssetPacking.h" />
     <ClInclude Include="Editor\EditorInterface.h" />
