--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -11,7 +11,7 @@ DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
 Pos=522,0
-Size=730,556
+Size=1078,556
 Collapsed=0
 DockId=0x00000002,0
 
@@ -104,15 +104,14 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=519,69
+Pos=377,292
 Size=730,410
 Collapsed=0
 
 [Window][Logs]
-Pos=1254,0
+Pos=355,129
 Size=346,556
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Stacked 2]
 Pos=527,313
@@ -154,7 +153,6 @@ Collapsed=0
 Pos=1254,0
 Size=346,556
 Collapsed=0
-DockId=0x00000004,1
 
 [Window][FBX Import Summary]
 Pos=0,558
@@ -173,6 +171,11 @@ Pos=292,558
 Size=1308,342
 Collapsed=0
 DockId=0x00000008,0
+
+[Window][Gizmo]
+Pos=400,20
+Size=371,181
+Collapsed=0
 
 [Table][0x2048C668,2]
 RefScale=13
@@ -213,10 +216,8 @@ Column 1  Weight=2.0000
 [Docking][Data]
 DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Selected=0x5E5F7166
   DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,556 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1252,900 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=520,900 Selected=0xBE5CABD5
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=730,900 CentralNode=1 Selected=0x5E5F7166
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=346,900 Selected=0x49347022
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=520,900 Selected=0xBE5CABD5
+    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=730,900 CentralNode=1 Selected=0x5E5F7166
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,342 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
       DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=290,510 Selected=0x86DC5FE7
