--- a/MofuEngine/MofuEngine.vcxproj.filters
+++ b/MofuEngine/MofuEngine.vcxproj.filters
@@ -528,6 +528,9 @@
     <ClInclude Include="Content\Guid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Content\SerializationUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Graphics\D3D12\Shaders\FullscreenTriangle.hlsl" />
