--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Editor\AssetPacking.cpp" />
     <ClCompile Include="Editor\EditorInterface.cpp" />
     <ClCompile Include="Editor\ImporterView.cpp" />
+    <ClCompile Include="Editor\Material.cpp" />
     <ClCompile Include="Editor\MaterialEditor.cpp" />
     <ClCompile Include="Editor\Project\Project.cpp" />
     <ClCompile Include="Editor\SceneEditorView.cpp" />
@@ -232,6 +233,7 @@
     <ClInclude Include="Editor\AssetPacking.h" />
     <ClInclude Include="Editor\EditorInterface.h" />
     <ClInclude Include="Editor\ImporterView.h" />
+    <ClInclude Include="Editor\Material.h" />
     <ClInclude Include="Editor\MaterialEditor.h" />
     <ClInclude Include="Editor\Project\Project.h" />
     <ClInclude Include="Editor\SceneEditorView.h" />
