--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -11,7 +11,7 @@ DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
 Pos=522,0
-Size=1078,508
+Size=1078,527
 Collapsed=0
 DockId=0x00000002,0
 
@@ -104,10 +104,9 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=522,0
-Size=1078,508
+Pos=351,109
+Size=1433,806
 Collapsed=0
-DockId=0x00000002,1
 
 [Window][Logs]
 Pos=1250,43
@@ -132,13 +131,13 @@ DockId=0x0000000B,0
 
 [Window][Scene hierarchy]
 Pos=0,0
-Size=520,508
+Size=520,527
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene hierarchy/##tree_2774B01A]
 IsChild=1
-Size=175,431
+Size=175,395
 
 [Window][Dear ImGui ID Stack Tool]
 Pos=60,60
@@ -162,14 +161,14 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Import settings]
-Pos=0,510
-Size=290,390
+Pos=0,529
+Size=290,371
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Content Browser]
-Pos=292,510
-Size=1308,390
+Pos=292,529
+Size=1308,371
 Collapsed=0
 DockId=0x00000008,0
 
@@ -216,10 +215,10 @@ Column 1  Weight=2.0000
 
 [Docking][Data]
 DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Selected=0x5E5F7166
-  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,508 Split=X
+  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,527 Split=X
     DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=520,900 Selected=0xBE5CABD5
-    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=730,900 CentralNode=1 Selected=0x15E43931
-  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,390 Split=X Selected=0x36AF052B
+    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=730,900 CentralNode=1 Selected=0x5E5F7166
+  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,371 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
       DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=290,510 Selected=0x86DC5FE7
       DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1308,510 Selected=0x3DF3100E
