adding and changing meshes for entities in scene view

--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,12 +104,12 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=85,57
-Size=586,329
+Pos=401,243
+Size=1023,575
 Collapsed=0
 
 [Window][Logs]
-Pos=1210,67
+Pos=995,49
 Size=346,556
 Collapsed=0
 
@@ -150,13 +150,13 @@ Size=819,825
 Collapsed=0
 
 [Window][Material View]
-Pos=1227,10
-Size=346,556
+Pos=1155,10
+Size=418,556
 Collapsed=0
 
 [Window][FBX Import Summary]
-Pos=0,510
-Size=290,390
+Pos=0,529
+Size=290,371
 Collapsed=0
 DockId=0x00000007,1
 
@@ -211,6 +211,11 @@ Column 5  Width=-1
 [Table][0xE0272E39,2]
 RefScale=13
 Column 0  Width=69
+Column 1  Weight=2.0000
+
+[Table][0x915FD707,2]
+RefScale=13
+Column 0  Width=103
 Column 1  Weight=2.0000
 
 [Docking][Data]
