--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,13 +104,13 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=475,169
-Size=1140,641
+Pos=673,67
+Size=889,500
 Collapsed=0
 
 [Window][Logs]
-Pos=995,49
-Size=346,556
+Pos=780,12
+Size=889,500
 Collapsed=0
 
 [Window][Stacked 2]
@@ -145,12 +145,12 @@ Size=323,104
 Collapsed=0
 
 [Window][Texture View]
-Pos=528,25
-Size=819,825
+Pos=530,25
+Size=796,866
 Collapsed=0
 
 [Window][Material View]
-Pos=1155,10
+Pos=1184,33
 Size=418,556
 Collapsed=0
 
@@ -210,12 +210,17 @@ Column 5  Width=-1
 
 [Table][0xE0272E39,2]
 RefScale=13
-Column 0  Width=95
+Column 0  Width=101
 Column 1  Weight=2.0000
 
 [Table][0x915FD707,2]
 RefScale=13
 Column 0  Width=103
+Column 1  Weight=2.0000
+
+[Table][0x2BF38D7F,2]
+RefScale=13
+Column 0  Width=126
 Column 1  Weight=2.0000
 
 [Docking][Data]
