--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,8 +104,8 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=673,67
-Size=889,500
+Pos=465,46
+Size=1263,710
 Collapsed=0
 
 [Window][Logs]
@@ -145,8 +145,8 @@ Size=323,104
 Collapsed=0
 
 [Window][Texture View]
-Pos=530,25
-Size=796,866
+Pos=530,26
+Size=796,865
 Collapsed=0
 
 [Window][Material View]
@@ -230,7 +230,7 @@ DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Se
     DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1091,900 CentralNode=1 Selected=0x5E5F7166
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,371 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
-      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=290,510 Selected=0x86DC5FE7
+      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=290,510 Selected=0x1664F641
       DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1308,510 Selected=0x3DF3100E
     DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1362,244 Selected=0x36AF052B
 
