--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -21,7 +21,7 @@ Size=607,944
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=933,241
+Pos=1027,354
 Size=339,375
 Collapsed=0
 
@@ -104,13 +104,13 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=466,45
-Size=1263,710
+Pos=487,50
+Size=1195,672
 Collapsed=0
 
 [Window][Logs]
-Pos=780,12
-Size=889,500
+Pos=1115,304
+Size=477,500
 Collapsed=0
 
 [Window][Stacked 2]
@@ -150,7 +150,7 @@ Size=796,865
 Collapsed=0
 
 [Window][Material View]
-Pos=1184,33
+Pos=1185,33
 Size=418,556
 Collapsed=0
 
@@ -176,6 +176,22 @@ DockId=0x00000008,0
 Pos=400,20
 Size=800,400
 Collapsed=0
+
+[Window][Dear ImGui Demo/##Basket_8B4CCC3E]
+IsChild=1
+Size=1019,260
+
+[Window][Dear ImGui Demo/0_E1BADA21]
+IsChild=1
+Size=492,260
+
+[Window][Dear ImGui Demo/##Tree_EC99B1DE]
+IsChild=1
+Size=1019,260
+
+[Window][Dear ImGui Demo/##Basket_10C9C799]
+IsChild=1
+Size=1019,260
 
 [Table][0x2048C668,2]
 RefScale=13
@@ -222,6 +238,25 @@ Column 1  Weight=2.0000
 RefScale=13
 Column 0  Width=126
 Column 1  Weight=2.0000
+
+[Table][0x29CD9FF7,3]
+
+[Table][0x302651AD,14]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=19
+Column 2  Width=19
+Column 3  Width=19
+Column 4  Width=19
+Column 5  Width=19
+Column 6  Width=19
+Column 7  Width=19
+Column 8  Width=19
+Column 9  Width=19
+Column 10 Width=19
+Column 11 Width=19
+Column 12 Width=19
+Column 13 Width=19
 
 [Docking][Data]
 DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Selected=0x5E5F7166
