--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,6 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 * text=auto
-
 # Set default behavior for command prompt diff.
 #
 # This is need for earlier builds of msysgit that does not have it on by
@@ -47,6 +46,9 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+*.tga filter=lfs diff=lfs merge=lfs -text
+*.model filter=lfs diff=lfs merge=lfs -text
+*.etex filter=lfs diff=lfs merge=lfs -text
 ExampleApp/Assets/Generated/Sponza.model filter=lfs diff=lfs merge=lfs -text
 ExampleApp/Assets/Generated/BistroInterior.model filter=lfs diff=lfs merge=lfs -text
 ExampleApp/Assets/Generated/Body_Roug.tga.etex filter=lfs diff=lfs merge=lfs -text
