debug rendering and material editing improvements

--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,7 +104,7 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=252,57
+Pos=778,302
 Size=864,486
 Collapsed=0
 
@@ -150,25 +150,25 @@ Size=796,865
 Collapsed=0
 
 [Window][Material View]
-Pos=1185,33
-Size=418,556
+Pos=1185,32
+Size=418,679
 Collapsed=0
 
 [Window][FBX Import Summary]
 Pos=0,529
-Size=290,371
+Size=268,371
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Import settings]
 Pos=0,529
-Size=290,371
+Size=268,371
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Content Browser]
-Pos=292,529
-Size=1308,371
+Pos=0,529
+Size=1600,371
 Collapsed=0
 DockId=0x00000008,0
 
@@ -192,6 +192,16 @@ Size=1019,260
 [Window][Dear ImGui Demo/##Basket_10C9C799]
 IsChild=1
 Size=1019,260
+
+[Window][Rendering]
+Pos=1291,119
+Size=253,143
+Collapsed=0
+
+[Window][Delete?]
+Pos=644,397
+Size=311,105
+Collapsed=0
 
 [Table][0x2048C668,2]
 RefScale=13
@@ -265,7 +275,7 @@ DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Se
     DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1091,900 CentralNode=1 Selected=0x5E5F7166
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,371 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
-      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=290,510 Selected=0x86DC5FE7
-      DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1308,510 Selected=0x3DF3100E
+      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=268,510 Selected=0x86DC5FE7
+      DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1330,510 Selected=0x3DF3100E
     DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1362,244 Selected=0x36AF052B
 
