--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Editor\Material.cpp" />
     <ClCompile Include="Editor\MaterialEditor.cpp" />
     <ClCompile Include="Editor\Project\Project.cpp" />
+    <ClCompile Include="Editor\RenderingConsole.cpp" />
     <ClCompile Include="Editor\SceneEditorView.cpp" />
     <ClCompile Include="Editor\TextureView.cpp" />
     <ClCompile Include="Editor\ValueDisplay.cpp" />
@@ -188,6 +189,7 @@
     <ClCompile Include="Graphics\GeometryData.cpp" />
     <ClCompile Include="Graphics\Lights\Light.cpp" />
     <ClCompile Include="Graphics\Renderer.cpp" />
+    <ClCompile Include="Graphics\RenderingDebug.cpp" />
     <ClCompile Include="Graphics\UIRenderer.cpp" />
     <ClCompile Include="Input\InputSystem.cpp" />
     <ClCompile Include="Input\Win32Input.cpp" />
@@ -244,6 +246,7 @@
     <ClInclude Include="Editor\Material.h" />
     <ClInclude Include="Editor\MaterialEditor.h" />
     <ClInclude Include="Editor\Project\Project.h" />
+    <ClInclude Include="Editor\RenderingConsole.h" />
     <ClInclude Include="Editor\SceneEditorView.h" />
     <ClInclude Include="Editor\TextureView.h" />
     <ClInclude Include="Editor\ValueDisplay.h" />
@@ -290,6 +293,7 @@
     <ClInclude Include="Graphics\Lights\Light.h" />
     <ClInclude Include="Graphics\Lights\LightsCommon.h" />
     <ClInclude Include="Graphics\Renderer.h" />
+    <ClInclude Include="Graphics\RenderingDebug.h" />
     <ClInclude Include="Graphics\UIRenderer.h" />
     <ClInclude Include="Input\InputState.h" />
     <ClInclude Include="Input\InputSystem.h" />
