--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -11,7 +11,7 @@ DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
 Pos=509,0
-Size=1091,527
+Size=1031,472
 Collapsed=0
 DockId=0x00000002,0
 
@@ -96,7 +96,7 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,0
-Size=1600,900
+Size=1540,845
 Collapsed=0
 
 [Window][DockSpaceHost]
@@ -104,8 +104,8 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=778,302
-Size=864,486
+Pos=496,51
+Size=868,488
 Collapsed=0
 
 [Window][Logs]
@@ -131,7 +131,7 @@ DockId=0x0000000B,0
 
 [Window][Scene hierarchy]
 Pos=0,0
-Size=507,527
+Size=507,472
 Collapsed=0
 DockId=0x00000001,0
 
@@ -167,8 +167,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Content Browser]
-Pos=0,529
-Size=1600,371
+Pos=0,474
+Size=1540,371
 Collapsed=0
 DockId=0x00000008,0
 
@@ -269,13 +269,13 @@ Column 12 Width=19
 Column 13 Width=19
 
 [Docking][Data]
-DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Selected=0x5E5F7166
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1540,845 Split=Y Selected=0x5E5F7166
   DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,527 Split=X
     DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=507,900 Selected=0xBE5CABD5
     DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1091,900 CentralNode=1 Selected=0x5E5F7166
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,371 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
-      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=268,510 Selected=0x86DC5FE7
+      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=268,510 Selected=0x1664F641
       DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1330,510 Selected=0x3DF3100E
     DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1362,244 Selected=0x36AF052B
 
